# cdp

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  README-control-plane-v0.1.md  README.md  README_next  SESSION_HANDOFF.md  ccp_architecture.drawio  ccp_kubernetes_for_decisions.drawio  docker-compose.yml  life_of_an_envelope  mental_model  pyproject.toml  requirements.txt
.github/: pull_request_template.md
cdp/: __init__.py
collab/: COUNCIL_ROLES.md  INDEX.md  OPERATING_MODEL.md  PROMOTION_PROTOCOL.md  README.md
docker/: README.md  api.Dockerfile  docker-compose.yml  smoke-test.sh  worker.Dockerfile
docs/: attorney-decision-register.md  constantc-cdp-standing-epistemic-safety-bridge.md  control-plane-as-decision-registry.md  decision-clause-ingestion.md  decision-lifecycle-review-flow.md  decision-registry-hierarchy-analytics.md  demo-visualization-outputs.md  identifier-registry.md  mobile-stakeholder-app-roadmap.md  nemawashi-workflow-rules-engine.md  product-demo-scenarios-roadmap.md  self-canonicalizing-ingestion.md  superset-decision-visualization-roadmap.md  z-config-lookup-spreadsheet-ingestion.md
drawings/: ccp_governance_state_machine.drawio  ccp_inside_ai_system.drawio  ccp_life_of_proposal.drawio  ccp_problem_framing.drawio  ccp_protocol_suite.drawio
prompts/: improve-the-process.md  repair-and-verify.md
prototype/: .env.example
rfc/: README.md  RFC-CDP-000-Repair-Band-Index-Addendum-2026-07-14.md  RFC-CDP-000-Series-Index.md  RFC-CDP-001-Vision-Scope-Principles.md  RFC-CDP-021-Envelope-Schema.md  (+67 more)
(+124 files in other folders)
